bugfix: increase header z-index to stay above searchbar

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,7 @@
   font-family: 'Roboto', sans-serif;
   background-color: var(--primary);
   transition: top 500ms ease-in-out;
+  z-index: 10;
 }
 
 .Header.scroll-up {
